cambios para asignar tareas a una catastrophe